gitrepo-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-volume-pod
  labels:
    name: gitrepo-volume
  containers:
    - name: web-server
      image: nginx:alpine
      resources:
        memory: "128Mi"
        cpu: "500m"
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
  volumes:
    - name: html
      gitRepo:
        repository: https://github.com/kaa-it/kubia-website-example.git
        revision: master
        directory: .
