kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: http
